--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "base100"
+description = "Encode your data into emoji"
+repository = "https://github.com/AdamNiederer/base100"
 version = "0.2.0"
 authors = ["Adam Niederer <Adam.Niederer@gmail.com>"]
 license = "AGPL-3.0"
