Add fast decode
While the SIMD implementations won't be much faster than their scalar
counterparts until _mm_shuffle_epi8 is implemented in stdsimd, this commit sets
the groundwork for a much faster decoder in base100.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ license = "AGPL-3.0"
 
 [dependencies]
 clap = {version = "2.19", features = ["yaml"]}
+stdsimd = {git = "https://github.com/rust-lang-nursery/stdsimd.git", optional = true}
+
+[features]
+simd = ["stdsimd"]
 
 [profile.release]
 opt-level = 3
