--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "AGPL-3.0"
 
 [dependencies]
 clap = {version = "2.19", features = ["yaml"]}
-stdsimd = {git = "https://github.com/rust-lang-nursery/stdsimd.git", optional = true}
+stdsimd = {version = "0.0.2", path = "stdsimd", optional = true}
 
 [features]
 simd = ["stdsimd"]
