--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "stdsimd"]
 	path = stdsimd
-	url = github:rust-lang-nursery/stdsimd.git
+	url = https://github.com/rust-lang-nursery/stdsimd.git
