Add SSE decoder
Thanks to a four-month-long yak shave, we now have platform-agnostic
SIMD-accelerated decoders. It still must be locked behind a feature,
unfortunately, but it'll compile on any platform!

Unfortunately, Meltdown has limited my RAM read speed to 300MB/s, so here's some
CPU benchmarks to show the improvement:

SIMD enabled:

test tests::bench_char_to_emoji_uniform ... bench:     122,204 ns/iter (+/- 1,393)
test tests::bench_char_to_emoji_zero    ... bench:      75,998 ns/iter (+/- 1,163)
test tests::bench_emoji_to_char_uniform ... bench:      65,038 ns/iter (+/- 701)
test tests::bench_emoji_to_char_zero    ... bench:      32,678 ns/iter (+/- 534)

SIMD disabled:

test tests::bench_char_to_emoji_uniform ... bench:     107,016 ns/iter (+/- 709)
test tests::bench_char_to_emoji_zero    ... bench:      75,646 ns/iter (+/- 662)
test tests::bench_emoji_to_char_uniform ... bench:      91,943 ns/iter (+/- 658)
test tests::bench_emoji_to_char_zero    ... bench:      91,927 ns/iter (+/- 724)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ authors = ["Adam Niederer <Adam.Niederer@gmail.com>"]
 license = "AGPL-3.0"
 
 [dependencies]
-clap = {version = "2.19", features = ["yaml"]}
-stdsimd = {version = "0.0.3", optional = true}
+clap = { version = "2.19", features = ["yaml"] }
+stdsimd = { version = "0.0.3", optional = true }
+faster = { git = "https://github.com/AdamNiederer/faster", branch = "master", optional = true }
 
 [features]
-simd = ["stdsimd"]
+simd = ["stdsimd", "faster"]
 
 [profile.release]
 opt-level = 3
