--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,4 +17,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbos
+      run: cargo build --verbose
