--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [package]
+edition = "2021"
 name = "base100"
 description = "Encode your data into emoji"
 repository = "https://github.com/AdamNiederer/base100"
@@ -8,11 +9,10 @@ license = "AGPL-3.0"
 
 [dependencies]
 clap = { version = "2.19", features = ["yaml"] }
-stdsimd = { version = "0.0.3", optional = true }
-faster = { git = "https://github.com/AdamNiederer/faster", branch = "master", optional = true }
 
 [features]
-simd = ["stdsimd", "faster"]
+default = ["simd"]
+simd = []
 
 [profile.release]
 opt-level = 3
